# 24520254.All6labs

./: .gitignore  CMakeLists.txt  README.md  lab2_benchmark_results.csv
docs/: Databenchmark_lab3_forLinux.txt  Databenchmark_lab3_forWindow.txt  lab4_benchmark_results_ForLinux.csv  lab4_benchmark_results_ForWindow.csv  lab6_benchmark_results_forWindow.csv  ~$Report.docx
gui_bonus/: rsaTool_gui-v2.py  rsaTool_gui-v3.py  rsaTool_gui.py
scripts/: build.bat  build.sh
scripts/lab1/: Bang_So_Lieu_Lab1.md  BenchMark_Lab1.txt  Benchmark_lab1_on_linux.txt  Lab1_Stats_Linux.csv  Lab1_Stats_Windows.csv  lab1_processed_stats.csv  plot_benchmark.py  process.py
scripts/lab2/: lab2_benchmark_results_forLinux.csv  plot_lab2.py
scripts/lab3/: benmark.py  lab3_parsed_stats.csv  plot_lab3.py
scripts/lab4/: plot_lab4.py
scripts/lab5/: lab5_benchmark_results_forLinux.csv  lab5_benchmark_results_forWindow.csv  plot_lab5.py
scripts/lab6/: lab6_benchmark_results_forLinux.csv  plot_lab6.py
src/lab1_sym_with_cryptopp/: .nonce_db  CMakeLists.txt  aestool.cpp  ct.bin.json  data.bin.json  fetch.py  gcm_ct.bin.json  gcm_decrypted.txt  key_ccm.hex  nist_vectors.json  plain.txt  secret.enc  secret.enc.json  secret.txt  test.txt  vectors.json
src/lab2_aes_pure/: .nonce_db  aesToolPureCPP.cpp  benchmark_lab2.cpp  lab2_KAT.json
src/lab3_rsa_hybrid/: CMakeLists.txt  benchmark_lab3.cpp  cipher.txt  cipher_A.txt  cipher_B.txt  fetch.py  fetch_kat.py  mykey.der  mykey.pem  mykey_metadata.json  roguekey.der  roguekey.pem  roguekey_metadata.json  rsatool.cpp  vectors.json
src/lab3_rsa_hybrid/kat_data/: test_key_0.pem  vectors.json
src/lab4_hash_pki/: benchmark_lab4.cpp  certificate.crt  ec-private-key.pem  fake.pem  fetch.py  hashtool.cpp  pkitool.cpp
src/lab5_signatures/: benchmark_lab5.cpp  sigtool.cpp
src/lab6_pqc/: benchmark_lab6.cpp  pqtool.cpp
tests/lab3/: negative_test.py
